tests/baselines/reference/-57087-21.errors.txt
-57087-21.ts(7,4): error TS1360: Type '{ (x: 1 | 2): 1 | 2; (x: 2): "2" | "3"; (x: 1 | 2): 1 | 2 | "2" | "3"; }' does not satisfy the expected type 'Garg1'.


==== -57087-21.ts (1 errors) ====
    // test f domain does not support Garg domain (3 omitted from f domain) - should not satisfy
    
    declare const f1: { (x: 1 | 2): 1 | 2; (x: 2): "2" | "3"; (x: 1 | 2): 1 | 2 | "2" |"3";}
    
    type Garg1 = ((x: 1 | 2) => 1 | 2) & ((x: 2 | 3) => "2" | "3");
    
    f1 satisfies Garg1; // should not satisfy
       ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1 | 2): 1 | 2; (x: 2): "2" | "3"; (x: 1 | 2): 1 | 2 | "2" | "3"; }' does not satisfy the expected type 'Garg1'.
    